[package]
name = "booth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
ark-r1cs-std = { version = "^0.3.0", default-features = false }
simpleworks = { git = "https://github.com/lambdaclass/simpleworks" }
